--- a/index.html
+++ b/index.html
@@ -524,11 +524,11 @@
                     D'autre part pour m'informer en temps réel, j'utilise des flux RSS protant sur l'actualité de l'IA par 
                     le bais de NewsBlur qui permet de centraliser les flux de différents sites :
                     <br>
-                    <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
+                    <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a> (média américain sur la technologie)
                     <br>
-                    <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a>
+                    <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a> (Commission nationale de l'informatique et des libertés)
                     <br>
-                    <a href="https://openai.com/blog">- Open IA</a>
+                    <a href="https://openai.com/blog">- Open IA</a> (Entreprise spécialisé en IA)
                     <br>
                     </p>
                     <p>
@@ -558,15 +558,17 @@
                     le thème de la protection des données est essentiel pour être en mesure de respecter les obligations légales et garantir la confidentialité des données des individus.
                     J'ai décidé à titre personnel de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législations européennes.
                 </p>
+		<p>
+		    Dans un premier temps j'ai commencé par me renseigner sur les lois en vigueurs en termes de protection de données, notamment en lisant la RGPD. 
+		</p>
                 <p>
                     Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en termes de protection des données : 
                     <br>
-                    <a href="https://www.cnil.fr/fr/actualites">- La CNIL</a>
+                    <a href="https://www.cnil.fr/fr/actualites">- La CNIL</a> (Commission nationale de l'informatique et des libertés)
                     <br>
-                    <a href="https://edpb.europa.eu/edpb_fr">- EDPB</a>
+                    <a href="https://edpb.europa.eu/edpb_fr">- EDPB</a> (Contrôleur européen de la protection des données)
                     <br>
-                    <a href="https://www.ssi.gouv.fr/flux-rss/"> - ANSSI</a>
-
+                    <a href="https://www.ssi.gouv.fr/flux-rss/"> - ANSSI</a> (Agence nationale de la sécurité des systèmes d'information)
                 </p>
             </div>
         </section>
