--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     <br>
                     <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a> (Commission nationale de l'informatique et des libertés)
                     <br>
-                    <a href="https://openai.com/blog">- Open IA</a> (Entreprise spécialisé en IA)
+                    <a href="https://openai.com/blog">- Open AI</a> (Entreprise spécialisé en IA)
                     <br>
                     </p>
                     <p>
