--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <!--Intitulé de l'experience, date et poste-->
                 <div id="exp_titre">
                     <h5>XDO - Designer Farmer</h5>
-                    <h6>2022 - Web développeur</h6>
+                    <h6>19/04/2022 au 17/06/2022 - Web développeur</h6>
                 </div>
                 <!--Description de l'experience-->
                 <div id="exp_text">
@@ -444,7 +444,7 @@
                 <!--Intitulé de l'experience, date et poste-->
                 <div id="exp_titre">
                     <h5>CGI – Apogée</h5>
-                    <h6>2023 – Développeur Junior</h6>
+                    <h6>02/01/2023 au 10/03/2023 – Développeur Junior</h6>
                 </div>
                 <!--Description de l'experience-->
                 <div id="exp_text">
