--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <!-- Division pour la partie de gauche-->
                 <div class="gauche1">
                     <video autoplay loop muted>
-                        <source src="static/projet/projet_en_attente.mp4" type="video/mp4">
+                        <source src="static/projet/projet5.mp4" type="video/mp4">
                         Votre navigateur ne supporte pas les vidéos.
                     </video>
                 </div>
