--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <!-- Division pour la partie de droite-->
                     <div class="droite2">
                         <video autoplay loop muted>
-                            <source src="static/projet/projet_en_attente.mp4" type="video/mp4">
+                            <source src="static/projet/projet4.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                           </video>
                     </div>
