--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@
                         <p>
                             Pour mener ce projet, j'ai utilisé le langage SQL et le logiciel Looping pour la mise en place de la base de données ainsi que C# et 
                             les frameworks .NET et Entity Framework pour le Web-Service.</p>
-                        <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 1.</p>
+                        <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant :
+				<a href="/ppe_e5_back.pdf">Dossier de réalisations 1</a>.</p>
                         <!-- Division pour la partie en bas à gauche-->
                         <div class="bas">
                             <div>
@@ -363,7 +364,8 @@
                 des données.</p>
                 <p>Pour construire ce projet, j'ai utilisé le langage C# avec le framework .NET ainsi que les langages HTML, CSS et JavaScript pour
                     l'aspect visuel de l'application.</p>
-                    <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 2.</p>
+                    <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant : 
+			    <a href="/ppe_e5_front.pdf">Dossier de réalisations 2</a>.</p>
                     <!-- Division pour la partie en bas à gauche-->
                     <div class="bas">
                         <div>
