--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     J'ai décidé à titre personnel de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législations européennes.
                 </p>
 		<p>
-		    Dans un premier temps, j'ai commencé par me renseigner sur les lois en vigueurs en termes de protection de données, notamment en lisant la RGPD. 
+		    Dans un premier temps, j'ai commencé par me renseigner sur les lois en vigueurs en termes de protection de données, notamment en me penchant sur le RGPD. 
 		</p>
                 <p>
                     Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en termes de protection des données : 
