--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header id="header_id">
             <div id="accroche">            
                 <div id="nom">Thomas DESCHAMPT </div>
-                <div id="titre">Etudiant en deuxième année d'informatique</div>
+                <div id="titre">Etudiant en troisième année d'informatique</div>
             </div>
             <!--- fond three js avec les vagues -->
             <div id="waves">
@@ -51,22 +51,20 @@
                 <div id="propos_cont">
                     <p id="desc">&nbsp &nbsp &nbsp Bonjour et bienvenue sur mon portfolio.
                         <br>
-                        Je m'appelle Thomas Deschampt, j'ai 20 ans et je suis originaire de Lyon.
+                        Je m'appelle Thomas Deschampt, j'ai 21 ans et je suis originaire de Lyon.
                         <br><br>
                         Étant passionné par l’informatique et les jeux-vidéos depuis de nombreuses années, je me suis naturellement dirigé 
                         vers un bac avec les spécialités Mathématiques et NSI au lycée. 
                         <br>
-                        Après avoir obtenu le bac avec mention bien en 2021, j’ai intégré l’EPSI Lyon.
-                        Actuellement, je suis en deuxième année d'études d'informatique en suivant un tronc commun « Socle numérique » et en
-                        parallèle, je prépare l'obtention d'un BTS SIO (Services Informatiques aux Organisations). 
+                        Après avoir obtenu le bac avec mention bien en 2021, j’ai intégré l’EPSI Lyon pour préparé un BTS SIO (Services Informatiques aux Organisations) option SLAM.
                         <br><br>
                         En préparant ce BTS avec l’option SLAM (Solutions Logicielles et Applications Métiers), j'ai pu approfondir mes connaissances 
                         en développement et découvrir de nouvelles technologies. J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de 
                         mettre en pratique mes compétences et de les enrichir.
                         <br>
-                        Plus tard, j'envisage de me spécialiser en développement.
+                        Plus tard, j'envisage de me spécialiser en développement notamment grâce à la certification CDA que je suis actuellement en train de suivre.
                         <br>
-                        Après ces deux années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 3 années d'alternance.
+                        Après ces trois années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance.
                         <br><br> 
                         Je serai très heureux de pouvoir vous aider dans vos futurs projets.<br>
                         Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me 
@@ -612,7 +610,7 @@
         <footer>
             <div id="foot_cont">
                 <p>Site développé par Thomas DESCHAMPT avec HTML, CSS, JavaScript, Three.Js et ViteJs.</p>
-                <p>&copy Thomas Deschampt 2023</p>
+                <p>&copy Thomas Deschampt 2024</p>
             </div>
         </footer>
 	</body>
