--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header id="header_id">
             <div id="accroche">            
                 <div id="nom">Thomas DESCHAMPT </div>
-                <div id="titre">Etudiant en troisième année d'informatique</div>
+                <div id="titre">Etudiant en quatrième année d'informatique</div>
             </div>
             <!--- fond three js avec les vagues -->
             <div id="waves">
